[package]
name = "tokio-mc"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
byteorder = "1.5.0"
bytes = "1.5.0"
futures-core = { version = "0.3.30", optional = true, default-features = false }
futures-util = { version = "0.3.30", optional = true, default-features = false }
log = "0.4.20"
smallvec = { version = "1.13.1", optional = true, default-features = false }
socket2 = { version = "0.5.5", optional = true, default-features = false }
thiserror = "1.0.58"
# tokio = { version = "1.35.1", default-features = false, features = ["io-util"] }
# Disable default-features to exclude unused dependency on libudev
tokio-serial = { version = "5.4.4", optional = true, default-features = false }
tokio-util = { version = "0.7.10", optional = true, default-features = false, features = [
    "codec",
] }


futures-executor = "0.3.30" # 添加 futures-executor

tokio = { version = "1.35.1",  features = ["full"]  }