[package]
name = "tokio-mc"
version = "0.1.0"
edition = "2021"
authors = ["YuhanCai <1046365096@qq.com>"]

[dependencies]
async-trait = "0.1.77"
byteorder = "1.5.0"
bytes = "1.5.0"
thiserror = "1.0.58"


# tokio = { version = "1.35.1",  features = ["full"]  }
tokio = { version = "1.35.1", default-features = false, features = ["io-util", "net", "rt", "rt-multi-thread", "macros", "time"] }
regex = "1.11.1"

futures-util = { version = "0.3.30", optional = true, default-features = false }

[features]
3e-sync = ["tcp", "sync","3e"]
3e-async =  ["tcp","3e"]
sync = ["futures-util"]
tcp = []
3e = []


[[example]]
name = "3e-client"
path = "examples/3e-client.rs"
required-features = ["3e-async"]

[[example]]
name = "3e-client-sync"
path = "examples/3e-client-sync.rs"
required-features = ["3e-sync"]