[package]
name = "tokio-mc"
version = "0.1.4"
edition = "2021"
authors = ["YuhanCai <1046365096@qq.com>"]
description = "A library for communication with PLCs using the MC protocol"
keywords = ["plc", "mc-protocol", "industrial", "mitsubishi", "tokio"]
categories = ["network-programming"]
homepage = "https://github.com/hanHHHyU/tokio-mc"
repository = "https://github.com/hanHHHyU/tokio-mc"
license = "MIT"

[dependencies]
async-trait = "0.1.77"
byteorder = "1.5.0"
bytes = "1.5.0"
thiserror = "2.0.12"
log = "0.4"


tokio = { version = "1.35.1", default-features = false, features = [
    "io-util",
    "net",
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
] }

futures-util = { version = "0.3.30", default-features = false, features = [
    "sink",
] }

socket2 = "0.5.9"
tokio-util = { version = "0.7.10", default-features = false, features = [
    "codec",
] }

[dev-dependencies]
env_logger = "0.11"


[features]
3e-sync = ["tcp", "sync"]
3e-async = ["tcp"]
sync = []
tcp = []
server = []


[[example]]
name = "3e-client"
path = "examples/3e-client.rs"
required-features = ["3e-async"]

[[example]]
name = "3e-client-sync"
path = "examples/3e-client-sync.rs"
required-features = ["3e-sync"]

[[example]]
name = "mitsubishi-mc-test-server"
path = "examples/mitsubishi-mc-test-server.rs"
required-features = ["tcp", "server"]
